--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
-    <title>{% block title %} {% endblock %} - FlaskApp</title>
+    <title>{% block title %} {% endblock %} - Retro Replay Co. Inventory Management</title>
     <style>
         .message {
             padding: 10px;
@@ -32,17 +32,20 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-        <a class="navbar-brand" href="{{ url_for('index') }}">FlaskApp</a>
+        <a class="navbar-brand" href="{{ url_for('index') }}">Retro Replay Co.</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('about') }}">About</a>
+                <a class="nav-link" href="{{ url_for('addconsole') }}">Add console stock</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('create') }}">Create</a>
+                <a class="nav-link" href="{{ url_for('search') }}">Search</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('add_console_type') }}">Add a new console type</a>
             </li>
         </ul>
         </div>
@@ -55,6 +58,11 @@
         {% block content %} {% endblock %}
     </div>
 
+    <div class="footer">
+        {% block footer %}
+        &copy; Copyright 2024 Retro Replay Co.
+        {% endblock %}
+    </div>
     <!-- Optional JavaScript -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
