fully implemented sqlite database

--- a/templates/add_console_type.html
+++ b/templates/add_console_type.html
@@ -4,7 +4,10 @@
     <h1>{% block title %} Add a New Console Type{% endblock %}</h1>
     <form method="POST" enctype=multipart/form-data>
         <label for="console_name"><h2>Console Name</h2></label><br>
-        <input type="text" name="console_name" placeholder="3 letter abbreviation" rows="1" cols="15"><br><br>
+        <input type="text" name="console_name" placeholder="Console Name" rows="1" cols="15"><br><br>
+
+        <label for="console_code"><h2>Console Code</h2></label><br>
+        <input type="text" name="console_code" placeholder="Console Code" rows="1" cols="15"><br><br>
 
         <label for="image"><h2>Console Image</h2></label><br>
         <input type="file" name="image"><br><br>
