--- a/templates/search.html
+++ b/templates/search.html
@@ -5,7 +5,7 @@
         <div>
             <form method="POST">
                 <h4>Enter Product Code</h4>
-                <input type="text" name="query" placeholder="Search query..." rows="1" cols="15"><br><br>
+                <input type="text" name="query" placeholder="Search query..." rows="1" cols="15" autofocus="autofocus"><br><br>
                 <button type="submit">Find it</button>
             </form>
         </div>
