--- a/templates/index.html
+++ b/templates/index.html
@@ -5,13 +5,13 @@
 
     <h2>Active Products</h2>
         <div class='result'>
-            <h4>Total Consoles: {{ consoles[0] }}</h4>
+            <h4>Total Consoles: {{ consoles }}</h4>
         </div>
         <div class='result'>
             <br>
             <h2>Recently added</h2>
         {% for result in recent %}
-            <a href= "./item/{{ result['ProductCode'] }}">{{ result['ProductCode'] }}</a><br>
+            <a href= "./item/{{ result.product_code }}">{{ result.product_code }}</a><br>
         {% endfor %}
         </div>
 
